--- a/pricing.html
+++ b/pricing.html
@@ -207,7 +207,7 @@
    </nav>
 
    <section class="hero">
-      <h1>Our Pricing</h1>
+      <h1>Our Pricing GIT</h1>
       <p class="tagline">Transparent, competitive pricing for all your digital needs</p>
    </section>
 
@@ -403,4 +403,5 @@
    </footer>
 
 </body>
+
 </html>
