--- a/Contactus.html
+++ b/Contactus.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Contact Us - Serene Ville</title> 
    <style>
       body {
          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
          background-color: #121212;
-         color: #e0e0e0;
+         color: #e0e0e0;         
          text-align: center;
          margin: 0;
-         padding: 0;
+         padding-top: 80px; /* ensures content isn't hidden by fixed nav */
       }
 
       nav {
@@ -49,7 +51,6 @@
       }
 
       .content {
-         padding-top: 80px;
          max-width: 800px;
          margin: 0 auto;
       }
@@ -72,13 +73,13 @@
          border-radius: 10px;
          box-shadow: 0 4px 12px rgba(0,0,0,0.3);
          margin-bottom: 40px;
+         text-align: left;
       }
 
       label {
          display: block;
          margin: 15px 0 5px;
          color: #b0b0b0;
-         text-align: left;
          font-weight: bold;
       }
 
@@ -118,6 +119,7 @@
          padding: 30px;
          border-radius: 10px;
          box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+         text-align: left;
       }
 
       .contact-info p {
@@ -162,7 +164,8 @@
          color: #666;
       }
    </style>
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+   <!-- Latest stable Font Awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
@@ -195,8 +198,10 @@
 
       <div class="contact-info">
          <h2><i class="fas fa-address-card"></i> Contact Information</h2>
-         <p><strong><i class="fas fa-envelope"></i> Email:</strong> <a href="mailto:aokech527@gmail.com">aokech527@gmail.com</a></p>
-         <p><strong><i class="fas fa-phone"></i> Phone:</strong> <a href="tel:+254736127674">+254 736 127 674</a></p>
+         <p><strong><i class="fas fa-envelope"></i> Email:</strong> 
+            <a href="mailto:aokech527@gmail.com">aokech527@gmail.com</a></p>
+         <p><strong><i class="fas fa-phone"></i> Phone:</strong> 
+            <a href="tel:+254736127674">+254 736 127 674</a></p>
       </div>
    </div>
 
@@ -206,7 +211,7 @@
          <a href="#">Terms of Service</a>
          <a href="contactus.html">Contact Us</a>
       </div>
-      <p class="copyright">&copy; 2023 Serene Ville. All rights reserved.</p>
+      <p class="copyright">&copy; 2025 Serene Ville. All rights reserved.</p>
    </footer>
 
 </body>
