--- a/Contactus.html
+++ b/Contactus.html
@@ -171,7 +171,7 @@
 
    <nav>
       <ul>
-         <li><a href="home.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
@@ -216,3 +216,4 @@
 
 </body>
 </html>
+
