--- a/aboutus.html
+++ b/aboutus.html
@@ -233,7 +233,7 @@
 
    <nav>
       <ul>
-         <li><a href="home.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
@@ -303,4 +303,5 @@
    </footer>
 
 </body>
+
 </html>
