--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
    <nav>
       <ul>
-         <li><a href="home.html">Home</a></li>
+         <li><a href="index.html">Home</a></li>
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
@@ -288,3 +288,4 @@
 
 </body>
 </html>
+
