--- a/Contactus.html
+++ b/Contactus.html
@@ -175,7 +175,7 @@
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
-         <li><a href="contactus.html">Contact</a></li>
+         <li><a href="Contactus.html">Contact</a></li>
       </ul>
    </nav>
 
@@ -196,7 +196,7 @@
          <button type="submit"><i class="fas fa-paper-plane"></i> Send Message</button>
       </form>
 
-      <div class="contact-info">
+      <div class="Contact-info">
          <h2><i class="fas fa-address-card"></i> Contact Information</h2>
          <p><strong><i class="fas fa-envelope"></i> Email:</strong> 
             <a href="mailto:aokech527@gmail.com">aokech527@gmail.com</a></p>
@@ -209,11 +209,12 @@
       <div class="footer-links">
          <a href="#">Privacy Policy</a>
          <a href="#">Terms of Service</a>
-         <a href="contactus.html">Contact Us</a>
+         <a href="Contactus.html">Contact Us</a>
       </div>
       <p class="copyright">&copy; 2025 Serene Ville. All rights reserved.</p>
    </footer>
 
 </body>
 </html>
+
 
