--- a/aboutus.html
+++ b/aboutus.html
@@ -237,7 +237,7 @@
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
-         <li><a href="contactus.html">Contact</a></li>
+         <li><a href="Contactus.html">Contact</a></li>
       </ul>
    </nav>
 
@@ -289,7 +289,7 @@
             <p>This unique approach ensures that clients benefit from both cutting-edge academic knowledge and practical implementation skills.</p>
          </div>
          
-         <a href="contactus.html" class="cta-button">Let's Work Together</a>
+         <a href="Contactus.html" class="cta-button">Let's Work Together</a>
       </div>
    </section>
 
@@ -297,7 +297,7 @@
       <div class="footer-links">
          <a href="#">Privacy Policy</a>
          <a href="#">Terms of Service</a>
-         <a href="contactus.html">Contact Us</a>
+         <a href="Contactus.html">Contact Us</a>
       </div>
       <p class="copyright">&copy; 2023 Serene Ville. All rights reserved.</p>
    </footer>
@@ -305,3 +305,4 @@
 </body>
 
 </html>
+
