--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
-         <li><a href="contactus.html">Contact</a></li>
+         <li><a href="Contactus.html">Contact</a></li>
       </ul>
    </nav>
 
@@ -232,7 +232,7 @@
       <div class="hero-content">
          <h1>Serene Ville</h1>
          <p class="tagline">Elevating your digital presence with cutting-edge solutions tailored to your unique needs.</p>
-         <a href="contactus.html" class="cta-button">Get Started</a>
+         <a href="Contactus.html" class="cta-button">Get Started</a>
       </div>
    </section>
 
@@ -281,11 +281,12 @@
       <div class="footer-links">
          <a href="privacy.html">Privacy Policy</a>
          <a href="terms.html">Terms of Service</a>
-         <a href="contactus.html">Contact Us</a>
+         <a href="Contactus.html">Contact Us</a>
       </div>
       <p class="copyright">&copy; 2023 Serene Ville. All rights reserved.</p>
    </footer>
 
 </body>
 </html>
+
 
