--- a/pricing.html
+++ b/pricing.html
@@ -202,7 +202,7 @@
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
-         <li><a href="contactus.html">Contact</a></li>
+         <li><a href="Contactus.html">Contact</a></li>
       </ul>
    </nav>
 
@@ -397,7 +397,7 @@
       <div class="footer-links">
          <a href="#">Privacy Policy</a>
          <a href="#">Terms of Service</a>
-         <a href="contactus.html">Contact Us</a>
+         <a href="Contactus.html">Contact Us</a>
       </div>
       <p class="copyright">&copy; 2023 Serene Ville. All rights reserved.</p>
    </footer>
@@ -405,4 +405,5 @@
 </body>
 
 </html>
+
 
