--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@
          <li><a href="aboutus.html">About Us</a></li>
          <li><a href="services.html">Our Services</a></li>
          <li><a href="pricing.html">Pricing</a></li>
-         <li><a href="contactus.html">Contact</a></li>
+         <li><a href="Contactus.html">Contact</a></li>
       </ul>
    </nav>
 
@@ -314,7 +314,7 @@
       <div class="footer-links">
          <a href="#">Privacy Policy</a>
          <a href="#">Terms of Service</a>
-         <a href="contactus.html">Contact Us</a>
+         <a href="Contactus.html">Contact Us</a>
       </div>
       <p class="copyright">&copy; 2023 Serene Ville. All rights reserved.</p>
    </footer>
@@ -322,3 +322,4 @@
 </body>
 
 </html>
+
