--- a/pricing.html
+++ b/pricing.html
@@ -207,7 +207,7 @@
    </nav>
 
    <section class="hero">
-      <h1>Our Pricing GIT</h1>
+      <h1>Our Pricing </h1>
       <p class="tagline">Transparent, competitive pricing for all your digital needs</p>
    </section>
 
@@ -405,5 +405,6 @@
 </body>
 
 </html>
+
 
 
