--- a/Contactus.html
+++ b/Contactus.html
@@ -50,6 +50,11 @@
          text-decoration: underline;
       }
 
+      nav ul li a.active {
+         color: #ffcc00; /* Highlight color */
+         font-weight: bold;
+      }
+
       .content {
          max-width: 800px;
          margin: 0 auto;
@@ -214,7 +219,5 @@
       <p class="copyright">&copy; 2025 Serene Ville. All rights reserved.</p>
    </footer>
 
-</body>
-</html>
-
-
+   <script>
+      //
