--- a/Contactus.html
+++ b/Contactus.html
@@ -35,6 +35,7 @@
 
       nav ul li {
          padding: 10px 15px;
+         position: relative;
       }
 
       nav ul li a {
@@ -50,9 +51,22 @@
          text-decoration: underline;
       }
 
+      /* Active Page Indicator (Bubble) */
       nav ul li a.active {
          color: #ffcc00; /* Highlight color */
          font-weight: bold;
+      }
+
+      nav ul li a.active::after {
+         content: '';
+         position: absolute;
+         bottom: -5px; /* Position the bubble just below the text */
+         left: 50%;
+         transform: translateX(-50%);
+         width: 8px;
+         height: 8px;
+         border-radius: 50%;
+         background-color: #4db8ff; /* Blue bubble */
       }
 
       .content {
@@ -176,11 +190,11 @@
 
    <nav>
       <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="aboutus.html">About Us</a></li>
-         <li><a href="services.html">Our Services</a></li>
-         <li><a href="pricing.html">Pricing</a></li>
-         <li><a href="Contactus.html">Contact</a></li>
+         <li><a href="index.html" id="home-link">Home</a></li>
+         <li><a href="aboutus.html" id="aboutus-link">About Us</a></li>
+         <li><a href="services.html" id="services-link">Our Services</a></li>
+         <li><a href="pricing.html" id="pricing-link">Pricing</a></li>
+         <li><a href="Contactus.html" id="contact-link" class="active">Contact</a></li>
       </ul>
    </nav>
 
@@ -201,7 +215,7 @@
          <button type="submit"><i class="fas fa-paper-plane"></i> Send Message</button>
       </form>
 
-      <div class="Contact-info">
+      <div class="contact-info">
          <h2><i class="fas fa-address-card"></i> Contact Information</h2>
          <p><strong><i class="fas fa-envelope"></i> Email:</strong> 
             <a href="mailto:aokech527@gmail.com">aokech527@gmail.com</a></p>
@@ -220,4 +234,15 @@
    </footer>
 
    <script>
-      //
+      // Function to highlight the active page link
+      const currentPage = window.location.pathname.split("/").pop(); // Get the current page name
+      const links = document.querySelectorAll('nav ul li a'); // Get all links in the nav
+
+      links.forEach(link => {
+         if (link.getAttribute('href') === currentPage) {
+            link.classList.add('active'); // Add 'active' class to the current page link
+         }
+      });
+   </script>
+</body>
+</html>
